# argos3-turtlebot3

./: .gitignore  README.md
doc/: TurtleBot3.html  link_to_cad_model
doc/TurtleBot3_files/: a_002.html  element.js  main.css
docker/: Dockerfile
src/: TODO.org
src/cmake/: ARGoSBuildOptions.cmake  ARGoSPackaging.cmake  TargetKheperaIV.cmake  TargetTurtlebot3.cmake
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/kheperaiv/: CMakeLists.txt
src/plugins/robots/kheperaiv/control_interface/: buzz_controller_kheperaiv.cpp  ci_kheperaiv_camera_sensor.cpp  ci_kheperaiv_camera_sensor.h  ci_kheperaiv_encoder_sensor.cpp  ci_kheperaiv_encoder_sensor.h  ci_kheperaiv_ground_sensor.h  ci_kheperaiv_lidar_sensor.cpp  ci_kheperaiv_ultrasound_sensor.h
src/plugins/robots/kheperaiv/real_robot/: main.cpp  real_kheperaiv_battery_sensor.cpp  real_kheperaiv_battery_sensor.h  real_kheperaiv_device.cpp  real_kheperaiv_differential_steering_actuator.cpp  real_kheperaiv_differential_steering_actuator.h  real_kheperaiv_differential_steering_device.h  real_kheperaiv_encoder_sensor.h  real_kheperaiv_gripper_actuator.cpp  real_kheperaiv_gripper_actuator.h  real_kheperaiv_leds_actuator.cpp  real_kheperaiv_lidar_sensor.cpp  real_kheperaiv_lidar_sensor.h  real_kheperaiv_proximity_sensor.cpp  real_kheperaiv_proximity_sensor.h  real_kheperaiv_ultrasound_sensor.cpp
src/plugins/robots/kheperaiv/simulator/: dynamics2d_kheperaiv_model.h  kheperaiv_entity.cpp  kheperaiv_ground_rotzonly_sensor.cpp  kheperaiv_ground_rotzonly_sensor.h  kheperaiv_lidar_default_sensor.h  kheperaiv_light_rotzonly_sensor.h  kheperaiv_measures.cpp  kheperaiv_ultrasound_default_sensor.cpp  kheperaiv_ultrasound_default_sensor.h  qtopengl_kheperaiv.h
src/plugins/robots/turtlebot3/: CMakeLists.txt
src/plugins/robots/turtlebot3/control_interface/: buzz_controller_turtlebot3.h  ci_kheperaiv_ground_sensor.cpp  ci_kheperaiv_lidar_sensor.h  ci_kheperaiv_light_sensor.h  ci_kheperaiv_proximity_sensor.h  ci_kheperaiv_ultrasound_sensor.cpp  ci_turtlebot3_light_sensor.cpp  ci_turtlebot3_proximity_sensor.cpp
src/plugins/robots/turtlebot3/real_robot/: battery.c  real_kheperaiv_differential_steering_device.cpp  real_kheperaiv_encoder_sensor.cpp  real_kheperaiv_ground_sensor.cpp  real_kheperaiv_ground_sensor.h  real_kheperaiv_leds_actuator.h  real_kheperaiv_ultrasound_sensor.h  real_turtlebot3.cpp  real_turtlebot3.h  real_turtlebot3_camera_sensor.cpp  real_turtlebot3_camera_sensor.h  real_turtlebot3_device.h
src/plugins/robots/turtlebot3/simulator/: dynamics2d_turtlebot3_model.cpp  kheperaiv_entity.h  kheperaiv_lidar_default_sensor.cpp  kheperaiv_light_rotzonly_sensor.cpp  qtopengl_kheperaiv.cpp  qtopengl_turtlebot3.cpp  qtopengl_turtlebot3.h  turtlebot3_entity.cpp  turtlebot3_entity.h  turtlebot3_lidar_default_sensor.cpp  turtlebot3_measures.cpp  turtlebot3_measures.h  turtlebot3_proximity_default_sensor.cpp  turtlebot3_proximity_default_sensor.h
src/plugins/robots/turtlebot3/simulator/models/: turtlebot3.mtl
src/testing/: CMakeLists.txt  kheperaiv_diffusion.h  testbuzzexperiment.argos  testexperiment.argos  turtlebot3_diffusion.cpp
